// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`VAlert.ts should be dismissible 1`] = `
<div class="v-alert v-sheet theme--light"
     role="alert"
     style="display: none;"
>
  <div class="v-alert__wrapper">
    <div class="v-alert__content">
    </div>
    <button class="v-btn v-btn--icon v-btn--round theme--light v-size--small v-alert__dismissible"
            type="button"
            aria-label="Close"
    >
      <span class="v-btn__content">
        <i aria-hidden="true"
           class="v-icon notranslate mdi mdi-close-circle theme--light"
        >
        </i>
      </span>
    </button>
  </div>
</div>
`;

exports[`VAlert.ts should be open by default 1`] = `
<div class="v-alert v-sheet theme--light"
     role="alert"
>
  <div class="v-alert__wrapper">
    <div class="v-alert__content">
    </div>
  </div>
</div>
`;

exports[`VAlert.ts should be open by default 2`] = `
<div class="v-alert v-sheet theme--light"
     role="alert"
     style="display: none;"
>
  <div class="v-alert__wrapper">
    <div class="v-alert__content">
    </div>
  </div>
</div>
`;

exports[`VAlert.ts should have a close icon 1`] = `
<div class="v-alert v-sheet theme--light"
     role="alert"
>
  <div class="v-alert__wrapper">
    <div class="v-alert__content">
    </div>
    <button class="v-btn v-btn--icon v-btn--round theme--light v-size--small v-alert__dismissible"
            type="button"
            aria-label="Close"
    >
      <span class="v-btn__content">
        <i aria-hidden="true"
           class="v-icon notranslate mdi mdi-close-circle theme--light"
        >
        </i>
      </span>
    </button>
  </div>
</div>
`;
